<resources>
    <string name="app_name">File Manager</string>
    <string name="details">Details</string>
    <string name="common_action_bar_title">File Manager</string>
    <string name="common_view">View</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_sure">Sure</string>
    <string name="common_ok">OK</string>
    <string name="common_go">Go</string>
    <string name="common_like">Like</string>
    <string name="common_stop">Stop</string>
    <string name="common_continue">Continue</string>
    <string name="common_skip">Skip</string>
    <string name="common_paste">Paste</string>
    <string name="common_retry">Retry</string>
    <string name="common_search">Search</string>
    <string name="common_ellipsis">…</string>
    <string name="gp_not_connect">Unable to open connection</string>
    <string name="about_copyright">Copyright:2013–2016 Go File Manager.</string>
    <string name="about_law_url">http://d2prafqgniatg5.cloudfront.net/soft/file/term/1272/gofilemanager_privacy.html</string>
    <string name="main_title"><b>File</b> Manager</string>
    <string name="main_category_title">Category</string>
    <string name="main_storage_title">Storage</string>
    <string name="main_category_item_number">(%1$d)</string>
    <string name="main_internal_storage">Internal storage</string>
    <string name="main_double_click_exit_app_tips">Press back again to exit File Manager.</string>
    <string name="main_dialog_single_detail_contain">%1$d folder(s), %2$d file(s)</string>
    <string name="main_category_item_photo">Image</string>
    <string name="main_category_item_video">Video</string>
    <string name="main_category_item_apps">App</string>
    <string name="main_category_item_music">Music</string>
    <string name="main_category_item_doc">Doc</string>
    <string name="main_category_item_zip">Zip</string>
    <string name="main_category_item_download">Download</string>
    <string name="main_category_item_recent">Recent</string>
    <string name="main_category_item_ad">AD</string>
    <string name="main_info_phone_storage">Phone storage:</string>
    <string name="main_info_sdcard_storage">SD card storage:</string>
    <string name="main_info_phone_used">Used %1$s</string>
    <string name="main_info_phone_unused">Available %1$s</string>
    <string name="main_info_photo">Image</string>
    <string name="main_info_music">Music</string>
    <string name="main_info_video">Video</string>
    <string name="main_info_docs">Doc</string>
    <string name="main_info_apps">App</string>
    <string name="main_info_other">Other</string>
    <string name="main_info_switch_phone">Phone</string>
    <string name="main_info_switch_sdcard">SD</string>
    <string name="main_directory_count">%1$d Items</string>
    <string name="drawer_tools">TOOLS</string>
    <string name="drawer_app_locker">App Locker</string>
    <string name="drawer_smart_locker">Smart Locker</string>
    <string name="drawer_smart_charge">Smart Charge</string>
    <string name="drawer_setting">SETTING</string>
    <string name="drawer_usb_plugin_message">USB Plug-in message</string>
    <string name="drawer_low_space_warning">Low Space Warning</string>
    <string name="drawer_logger_notification">Logger Notification</string>
    <string name="drawer_other">OTHER</string>
    <string name="drawer_rating">Rating This App</string>
    <string name="drawer_update">Update Setting</string>
    <string name="drawer_help">Help&#160;&amp;&#160;Feedback</string>
    <string name="drawer_about">About</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="private_start">START</string>
    <string name="private_join_uep">&lt;u&gt;User Experience Program&lt;/u&gt;</string>
    <string name="privacy_start_by_agree_policy">Agree to the &lt;u&gt;Privacy Policy&lt;/u&gt;</string>
    <string name="privacy_uep_plan_info_page">http://d2prafqgniatg5.cloudfront.net/soft/file/term/1272/gofilemanager_statement.html</string>
    <string name="user_protocol_privacy_policy">Privacy Policy</string>
    <string name="user_protocol_user_experience">&lt;u&gt;User Experience Program&lt;/u&gt;</string>
    <string name="about_about_us">About us</string>
    <string name="about_app_version">Version %1$s</string>
    <string name="about_check_update">Update Ace Network</string>
    <string name="about_rate">Rate us at GooglePlay</string>
    <string name="about_policy">Privacy Policy</string>
    <string name="about_contact_us">Contact Us</string>
    <string name="about_user_experience_program">User Experience Program</string>
    <string name="feedback_content">Below is system information needed to help locate the issues you encountered. We WILL NOT collect any of your personal information</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_tip_content">Tricked or forced to install %1$s?</string>
    <string name="feedback_tip_content2">The deceptive ad you encountered is horrbile and intolerable. We will help you find it out and make it get punished</string>
    <string name="feedback_no_contain">Hi,say something?</string>
    <string name="feedback_container_hint">Input your feedback</string>
    <string name="feedback_notice">To better lovate the problem. device &amp; system info will be sent, We will NOT gather your personal info.</string>
    <string name="feedback_no_email">No Email APP found</string>
    <string name="feedback_check_network">Please check your network connection.</string>
    <string name="feedback_tip_send_report">Yes, Report!</string>
    <string name="feedback_tip_no">No</string>
    <string name="feedback_title_common_problem">Common Problems</string>
    <string name="feedback_problem_virus_install">Virus install</string>
    <string name="feedback_problem_tricking_ad">Tricking ads</string>
    <string name="feedback_details_virus_install">Why is there virus installing your app automatically? \n\n You might have tricked by malicious promotions! We are strongly against virus-forced installation. If you installed our app this way, please feedback to us immediately so that we could take action.</string>
    <string name="feedback_details_tricking_ad">How come there are features on the adas that I can\'t find on the app?\n\nYou might have tricked by false ads! We are strongly against misleading installation by false ads. If you installed our app this way, please feedback to us immediately so that we could take action.</string>
    <string-array name="feedback_common_question_list">
        <item>Common Feedback</item>
        <item>Suggestion I Got</item>
        <item>Problem I Found</item>
        <item>Forced/Tricked Installation</item>
    </string-array>
    <string name="image_title">Image</string>
    <string name="music_title">Music</string>
    <string name="video_title">Video</string>
    <string name="download_title">Download</string>
    <string name="filetype_video">Video</string>
    <string name="filetype_image">Picture</string>
    <string name="filetype_music">Music</string>
    <string name="filetype_document">Document</string>
    <string name="filetype_apk">Apk</string>
    <string name="filetype_text">Text</string>
    <string name="filetype_audio">Audio</string>
    <string name="filetype_compression">Compression</string>
    <string name="common_others">Others</string>
    <string name="clean_days_ago"> days old</string>
    <string name="clean_group_residue">Residual Files</string>
    <string name="clean_group_cache">Cache Junk</string>
    <string name="clean_group_temp">System Temp Files</string>
    <string name="clean_group_apk">Obsolete apks</string>
    <string name="clean_group_big_file">Big File</string>
    <string name="clean_group_ad">AD Junk</string>
    <string name="clean_group_memory">Memory Junk</string>
    <string name="clean_item_sys_cache">System Cache</string>
    <string name="gallery_thumbnails">Gallery Thumbnails</string>
    <string name="clean_subitem_detail_result_0">%1$s &lt;font color="#00BBA0">Your files will not be affected after cleaning.&lt;/font></string>
    <string name="clean_subitem_detail_result_1">%1$s &lt;font color="#00BBA0">Cleaning is completely safe.&lt;/font></string>
    <string name="clean_subitem_detail_result_2">%1$s &lt;font color="#FF7D7D">They will need to be reDownloaded.&lt;/font></string>
    <string name="clean_subitem_detail_result_10">%1$s &lt;font color="#FF7D7D">Cleaning will remove these forever!&lt;/font></string>
    <string name="trash">trash</string>
    <string name="activity_applock_title">App lock</string>
    <string name="applock_psd_set_step_1">Please set up a password</string>
    <string name="applock_psd_input_password">Please input password</string>
    <string name="applock_psd_set_step_2">Please re-enter your password</string>
    <string name="applock_psd_set_step_3">Password protection</string>
    <string name="applock_psd_answer_question_edit_hint">Less than 15 words</string>
    <string name="applock_psd_set_lock_options">Lock options</string>
    <string-array name="pupup_window_lock_options">
        <item>Lock everytime leaving an apps</item>
        <item>Lock apps after screen is off</item>
    </string-array>
    <string-array name="applock_listview_group_title">
        <item>Recommended</item>
        <item>Others</item>
        <item>Search Result</item>
        <item>No match found</item>
    </string-array>
    <string name="applock_pre_header_text1_new">Top %1$d app(s) recommended to locked up</string>
    <string name="applock_header_text1_new">App Lock is active</string>
    <string name="applock_header_text2_new">%1$d App(s) are being protected</string>
    <string name="applock_pre_header_text2_new">Activate Applock to stay protected</string>
    <string name="applock_pre_operate_txt">Lock</string>
    <string name="set_graphic_password_message_save">Save</string>
    <string name="set_graphic_password_message_draw">Setting the unlock pattern of app(s)</string>
    <string name="set_graphic_password_message_too_short">Connect at least 4 dots.</string>
    <string name="set_graphic_password_message_redraw">Drawing the pattern again to confirm it</string>
    <string name="set_graphic_password_message_wrong">Error, try again!</string>
    <string name="set_graphic_password_message_set_question">if you forget the password you can be reset it by answering insecure question</string>
    <string name="file_open_as">Open as</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="dialog_single_file_detail_title_folder">Folder Details</string>
    <string name="dialog_single_file_detail_name">Name</string>
    <string name="dialog_single_file_detail_location">Location</string>
    <string name="dialog_single_file_detail_last_modify">Modification Time</string>
    <string name="dialog_single_file_detail_size">Size</string>
    <string name="dialog_single_file_detail_contains">Contains</string>
    <string name="dialog_delete_confirm_title">Confirm Deletion</string>
    <string name="dialog_delete_confirm_danger_tips">This behavior may cause a system or application crash!</string>
    <string name="dialog_delete_confirm_desc">Are you sure to delete the selected item(s)?</string>
    <string name="dialog_duplicate_file_paste_title">File Duplicated</string>
    <string name="dialog_duplicate_file_paste_desc">The same filename already exists, Do you want to overwrite?</string>
    <string name="dialog_duplicate_file_paste_apply_to_all">Apply to all</string>
    <string name="extract">Extract</string>
    <string name="view">View</string>
    <string name="guide_dialog_title">User guide</string>
    <string name="guide_dialog_smart_charge_tip">Display the current charging status, including sponsored content.</string>
</resources>