<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <TextView
        android:id="@+id/tv_common_operate_bar_cut"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@drawable/ic_drawer_about"
        android:drawablePadding="3dp"
        android:text="@string/cut"
        android:textColor="#FFFFFF"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tv_common_operate_bar_copy"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@drawable/ic_drawer_setting"
        android:drawablePadding="3dp"
        android:text="@string/copy"
        android:textColor="#FFFFFF"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tv_common_operate_bar_delete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@drawable/ic_drawer_feedback"
        android:drawablePadding="3dp"
        android:text="@string/delete"
        android:textColor="#FFFFFF"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tv_common_operate_bar_more"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@drawable/ic_operate_bar_more"
        android:drawablePadding="3dp"
        android:text="@string/more"
        android:textColor="#FFFFFF"
        android:textSize="16dp"/>

</merge>