<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="SpUsage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_delete_confirm_title"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_gravity="start"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/dialog_delete_confirm_title"/>

    <TextView
        android:id="@+id/tv_delete_confirm_danger_tips"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:background="#FF8181"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        android:text="@string/dialog_delete_confirm_danger_tips"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_delete_confirm_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/dialog_delete_confirm_desc"
        android:textColor="#000000"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_delete_confirm_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="9dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:minWidth="80dp"
            android:gravity="center"
            android:textColor="@color/dialog_cancel_color"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/common_cancel"/>

        <TextView
            android:id="@+id/tv_delete_confirm_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="9dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:minWidth="80dp"
            android:gravity="center"
            android:textColor="@color/dialog_confirm_color"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/common_ok"/>

    </LinearLayout>

</LinearLayout>