<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="320dp"
              android:layout_height="218dp"
              android:background="@drawable/white_2_dp_corner_bg"
              android:orientation="vertical">

    <TextView
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:textColor="#b3000000"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/btn_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:text="@string/view"
        android:textColor="@color/green_text_color_selector"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/btn_extract"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:gravity="center_vertical"
        android:text="@string/extract"
        android:textColor="@color/green_text_color_selector"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:gravity="center_vertical"
        android:text="@string/common_cancel"
        android:textColor="@color/green_text_color_selector"
        android:textSize="16dp"/>
</LinearLayout>