<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_rate_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_dialog_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/h1_20"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="9dp"
            android:src="@drawable/ic_smart_charge_iphone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_rate_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h1_20"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black_70"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/drawer_smart_charge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h3_16"
            android:textColor="@color/black_70"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/guide_dialog_smart_charge_tip"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@color/common_bg"/>

        <TextView
            android:id="@+id/dialog_introduce_charge_ok"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/common_ok"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/h3_16"
            android:textStyle="bold"
            android:background="@drawable/common_item_bottom_round_selector"
            android:textColor="@color/common_style_green"/>

    </LinearLayout>

</LinearLayout>